--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <nav class="navbar">
                     <div class="tm-navbar-bg">
 
-                        <a class="navbar-brand text-uppercase" href="#"></i>Yao Li</a>
+                        <a class="navbar-brand text-uppercase" href="#">Yao Li</a>
 
                         <button class="navbar-toggler hidden-lg-up" type="button" data-toggle="collapse" data-target="#tmNavbar">
                             &#9776;
