--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                         <div class="container-fluid js-tm-page-content" data-page-no="2">
 
-                            <div class="cd-bg-video-wrapper" data-video="video/red-flower">
+                            <div class="cd-bg-video-wrapper" data-video="video/road">
                                 <!-- video element will be loaded using jQuery -->
                             </div> <!-- .cd-bg-video-wrapper -->
 
