--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="cd-full-width">
                         <div class="container-fluid js-tm-page-content tm-page-1" data-page-no="1">
 
-                            <div class="cd-bg-video-wrapper" data-video="video/moving-cloud">
+                            <div class="cd-bg-video-wrapper" data-video="video/cloud">
                                 <!-- video element will be loaded using jQuery -->
                             </div> <!-- .cd-bg-video-wrapper -->
 
@@ -281,7 +281,7 @@
                   <div class="cd-full-width">
                       <div class="container-fluid js-tm-page-content" data-page-no="3">
 
-                          <div class="cd-bg-video-wrapper" data-video="video/padaut-bee">
+                          <div class="cd-bg-video-wrapper" data-video="video/nyc">
                               <!-- video element will be loaded using jQuery -->
                           </div> <!-- .cd-bg-video-wrapper -->
 
