--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
                         <div class="container-fluid js-tm-page-content" data-page-no="4">
 
-                            <div class="cd-bg-video-wrapper" data-video="video/night-light-blur">
+                            <div class="cd-bg-video-wrapper" data-video="video/photo">
                                 <!-- video element will be loaded using jQuery -->
                             </div> <!-- .cd-bg-video-wrapper -->
 
