--- a/index.html
+++ b/index.html
@@ -382,9 +382,7 @@
 
 
 
-                <p class="tm-copyright-text">Copyright &copy; 2016 Your Company
-
-                - More Templates <a href="http://www.cssmoban.com/" target="_blank" title="cssmoban">cssmoban</a> - Collect from <a href="http://www.cssmoban.com/" title="cssmoban" target="_blank">cssmoban</a></p>
+                <p class="tm-copyright-text">Copyright &copy; 2018 - Collect from <a href="http://www.cssmoban.com/" title="cssmoban" target="_blank">cssmoban</a></p>
 
             </footer>
 
