--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 tm-2-col-right">
                                                 <div class="text-xs-left tm-textbox tm-2-col-textbox">
-                                                    <p class="tm-text">Yao Li is a PhD student in the Department of Geographic Sciences, Univerisity of Maryland, College Park. Currently interested in the field of Health GIS, dynamic simulation and visualization</p>
+                                                    <p class="tm-text">Yao Li is a PhD student in the Department of Geographic Sciences, Univerisity of Maryland, College Park. Currently interested in the field of Health GIS, dynamic simulation and visualization.</p>
                                                     <p class="tm-text">Email: liyao@umd.edu</p>
                                                 </div>
                                             </div>
