--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                             <p class="tm-text"><i>2013&nbsp-&nbsp2016&nbsp:</i> &nbsp Univerisity of Chinese Academy of Sciences.&nbsp&nbsp&nbsp<strong>Master</strong><br/><i>Major&nbsp:</i> <strong>&nbsp&nbsp&nbspEcology</strong></p>
                                             <p class="tm-text"><i>2009&nbsp-&nbsp2013&nbsp:</i> &nbsp Wuhan Univerisity.&nbsp&nbsp&nbsp<strong>Bachelor</strong><br/><i>Major&nbsp:</i> <strong>&nbsp&nbsp&nbspRemote Sensing Science and Technology</strong></p>
                                             <h2 class="tm-text-title">Experiences</h2>
-                                            <p class="tm-text"><i>2017&nbsp-&nbsppresent&nbsp:</i> &nbsp Research Assistant for NIH and NASA project&nbsp.</p>
+                                            <p class="tm-text"><i>2017&nbsp-&nbsppresent&nbsp:</i> &nbsp Research Assistant for NIH, Gates Foundation and NASA projects&nbsp.</p>
                                             <p class="tm-text"><i>2016&nbsp-&nbsp2017&nbsp:</i> &nbsp Teaching Assistant for Department of Geographic Sciences, Univerisity of Maryland, College Park.&nbsp.</p>
                                             <p class="tm-text"><i>2013&nbsp-&nbsp2016&nbsp:</i> &nbsp Research Assistant for NSFC (The National Natural Science Foundation of China) project : ‘<i>Multi-scale dynamic simulation of grasshopper meta-population based on cellular automata </i>’.</p>
                                             <p class="tm-text"><i>2013&nbsp-&nbsp2015&nbsp:</i> &nbsp Field survey in Xianghuangqi County,Inner Mongolia, China.</p>
@@ -252,7 +252,6 @@
                                                   </div><!--skill end-->
                                                   <p></p>
 
-
                                                   <p>Lightroom</p>
                                                   <div class="progress">
                                                       <div class="progress-barT" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100" style="width: 72%">
@@ -264,6 +263,14 @@
                                                   <p>Sonar</p>
                                                   <div class="progress">
                                                       <div class="progress-barT" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+
+                                                      </div>
+                                                  </div><!--skill end-->
+                                                  <p></p>
+
+                                                  <p>DaVinci</p>
+                                                  <div class="progress">
+                                                      <div class="progress-barT" role="progressbar" aria-valuenow="36" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
 
                                                       </div>
                                                   </div><!--skill end-->
