--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
 
 
 
-                <p class="tm-copyright-text">Copyright &copy; 2018 - Collect from <a href="http://www.cssmoban.com/" title="cssmoban" target="_blank">cssmoban</a></p>
+                <p class="tm-copyright-text">Copyright &copy; Collect from <a href="http://www.cssmoban.com/" title="cssmoban" target="_blank">cssmoban</a></p>
 
             </footer>
 
