--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                             </div>
                                             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 tm-2-col-right">
                                                 <div class="text-xs-left tm-textbox tm-2-col-textbox">
-                                                    <p class="tm-text">Yao Li is a PhD student in the Department of Geographic Sciences, Univerisity of Maryland, College Park. Currently interested in the field of Health GIS, dynamic simulation and visualization.</p>
+                                                    <p class="tm-text">Yao Li is a postdoctoral researcher at the Department of Geographic Sciences, Univerisity of Maryland, College Park. Currently interested in the field of Health GIS, human mobitliy, dynamic simulation and visualization.</p>
                                                     <p class="tm-text">Email: liyao@umd.edu</p>
                                                 </div>
                                             </div>
@@ -135,11 +135,12 @@
                                       <div class="tm-2-col-textbox tm-bg-white-translucent">
                                           <div class="text-xs-left tm-textbox tm-textbox-padding">
                                             <h2 class="tm-text-title">Education</h2>
-                                            <p class="tm-text"><i>2016&nbsp-&nbsppresent&nbsp:</i> &nbsp Univerisity of Maryland, College Park.&nbsp&nbsp&nbsp<strong>PhD</strong><br/><i>Major&nbsp:</i> <strong>&nbsp&nbsp&nbspGeographic Sciences</strong></p>
+                                            <p class="tm-text"><i>2016&nbsp-&nbsp2021&nbsp:</i> &nbsp Univerisity of Maryland, College Park.&nbsp&nbsp&nbsp<strong>PhD</strong><br/><i>Major&nbsp:</i> <strong>&nbsp&nbsp&nbspGeographic Sciences</strong></p>
                                             <p class="tm-text"><i>2013&nbsp-&nbsp2016&nbsp:</i> &nbsp Univerisity of Chinese Academy of Sciences.&nbsp&nbsp&nbsp<strong>Master</strong><br/><i>Major&nbsp:</i> <strong>&nbsp&nbsp&nbspEcology</strong></p>
                                             <p class="tm-text"><i>2009&nbsp-&nbsp2013&nbsp:</i> &nbsp Wuhan Univerisity.&nbsp&nbsp&nbsp<strong>Bachelor</strong><br/><i>Major&nbsp:</i> <strong>&nbsp&nbsp&nbspRemote Sensing Science and Technology</strong></p>
                                             <h2 class="tm-text-title">Experiences</h2>
-                                            <p class="tm-text"><i>2017&nbsp-&nbsppresent&nbsp:</i> &nbsp Research Assistant for NIH and NASA projects&nbsp.</p>
+                                            <p class="tm-text"><i>2021&nbsp-&nbsppresent&nbsp:</i> &nbsp Postdoctoral Researcher for NIH and NSF projects&nbsp.</p>
+                                            <p class="tm-text"><i>2017&nbsp-&nbsp2021&nbsp:</i> &nbsp Research Assistant for NIH, NASA and Gates Foundation projects&nbsp.</p>
                                             <p class="tm-text"><i>2016&nbsp-&nbsp2017&nbsp:</i> &nbsp Teaching Assistant for Department of Geographic Sciences, Univerisity of Maryland, College Park.&nbsp.</p>
                                             <p class="tm-text"><i>2013&nbsp-&nbsp2016&nbsp:</i> &nbsp Research Assistant for NSFC (The National Natural Science Foundation of China) project : ‘<i>Multi-scale dynamic simulation of grasshopper meta-population based on cellular automata </i>’.</p>
                                             <p class="tm-text"><i>2013&nbsp-&nbsp2015&nbsp:</i> &nbsp Field survey in Xianghuangqi County,Inner Mongolia, China.</p>
