--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                                                 <p>Python</p>
                                                 <div class="progress">
-                                                    <div class="progress-bar" role="progressbar" aria-valuenow="71" aria-valuemin="0" aria-valuemax="100" style="width: 71%">
+                                                    <div class="progress-bar" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100" style="width: 71%">
                                                     </div>
                                                 </div><!--skill end-->
 
@@ -167,45 +167,35 @@
 
                                                 <p>R</p>
                                                 <div class="progress">
-                                                    <div class="progress-bar" role="progressbar" aria-valuenow="68" aria-valuemin="0" aria-valuemax="100" style="width: 68%">
-                                                    </div>
-                                                </div><!--skill end-->
-                                                <p></p>
-
-                                                <p>C++</p>
-                                                <div class="progress">
-                                                    <div class="progress-bar" role="progressbar" aria-valuenow="53" aria-valuemin="0" aria-valuemax="100" style="width: 53%">
-                                                    </div>
-                                                </div><!--skill end-->
-                                                <p></p>
-
-
-                                                <p>C#</p>
-                                                <div class="progress">
-                                                    <div class="progress-bar" role="progressbar" aria-valuenow="47" aria-valuemin="0" aria-valuemax="100" style="width: 47%">
-
-                                                    </div>
-                                                </div><!--skill end-->
-                                                <p></p>
-
-                                                <p>Java</p>
-                                                <div class="progress">
-                                                    <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%">
-
+                                                    <div class="progress-bar" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100" style="width: 68%">
                                                     </div>
                                                 </div><!--skill end-->
                                                 <p></p>
 
                                                 <p>Html</p>
                                                 <div class="progress">
-                                                    <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%">
+                                                    <div class="progress-bar" role="progressbar" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" style="width: 65%">
                                                     </div>
                                                 </div><!--skill end-->
                                                 <p></p>
 
                                                 <p>JavaScript</p>
                                                 <div class="progress">
-                                                    <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%">
+                                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 65%">
+                                                    </div>
+                                                </div><!--skill end-->
+                                                <p></p>
+
+                                                <p>Spark</p>
+                                                <div class="progress">
+                                                    <div class="progress-bar" role="progressbar" aria-valuenow="51" aria-valuemin="0" aria-valuemax="100" style="width: 53%">
+                                                    </div>
+                                                </div><!--skill end-->
+                                                <p></p>
+                                                
+                                                <p>C++</p>
+                                                <div class="progress">
+                                                    <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 53%">
                                                     </div>
                                                 </div><!--skill end-->
                                                 <p></p>
@@ -297,30 +287,58 @@
 
                                           <div class="tm-2-col-textbox tm-bg-white-translucent">
                                               <div class="text-xs-left tm-textbox tm-textbox-padding">
-                                                  <h2 class="tm-text-title">Malaria parasites migration simulation</h2>
-                                                  <p class="tm-text">Malaria is still a major disease burden in southeast Asia.</p>
-                                                  <p class="tm-text">Currently working on simulate the migration of malaria parasites</p>
+                                                  <h1 class="tm-text-title">Malaria parasites migration simulation</h1>
+                                                  <p class="tm-text"></p>
+
+                                                  <p class="tm-text-title">Understanding the genetic structure of natural populations provides insight into the demographic and adaptive processes that have affected those populations. Such information, particularly when integrated with geospatial data, can have translational applications for a variety of fields, including public health. In this study, we developed a workflow to optimize the resolution of spatial grids used to generate EEMS migration maps and applied this optimized workflow to estimate migration of Plasmodium falciparum in Cambodia and bordering regions of Thailand and Vietnam.</p>
+                                                  <p class="tm-text-title"><b>Related publications:</b> <br> <b>1. Yao Li</b>, Amol C. Shetty, Chanthap Lon, Michele Spring, David L. Saunders, Mark M. Fukuda, Tran Tinh Hien et al. "Detecting geospatial patterns of Plasmodium falciparum parasite migration in Cambodia using optimized estimated effective migration surfaces." <i>International Journal of Health Geographics</i> 19, no. 1 (2020): 1-11. <br><br> <b>2.</b> Shetty, Amol C., Christopher G. Jacob, Fang Huang, <b>Yao Li</b>, Sonia Agrawal, David L. Saunders, Chanthap Lon et al. "Genomic structure and diversity of Plasmodium falciparum in Southeast Asia reveal recent parasite migration patterns." <i>Nature communications</i> 10, no. 1 (2019): 1-11.</p>
                                               </div>
                                           </div>
 
                                           <div class="tm-2-col-textbox tm-bg-white-translucent">
                                               <div class="text-xs-left tm-textbox tm-textbox-padding">
-                                                  <h2 class="tm-text-title">New York city bicycle-related car accidents</h2>
-                                                  <p class="tm-text">Analyze and visualizing the bicycle-related car accidents in New York City</p>
-                                                  <p class="tm-text">This project has already finished. Three output work including:</p>
-                                                  <p class="tm-text">i : Monthly accidents heatmap for NYC.  <br>ii : Anually accidents heatmap for NYC. <br>iii : Bicycle dynamic visualization for NYC</p>
-                                              </div>
-                                          </div>
-
-                                          <div class="tm-2-col-textbox tm-bg-white-translucent">
-                                              <div class="text-xs-left tm-textbox tm-textbox-padding">
-                                                  <h2 class="tm-text-title">Campus population density prediction</h2>
-                                                  <p class="tm-text">Visualizing the population density on campus for Univerisity of Maryland, College Park.</p>
-                                                  <p class="tm-text">An android application has been developed to show the realtime population density on campus.</p>
+                                                  <div class="text-xs-left tm-textbox tm-2-col-textbox">
+                                                    <div class="photo-frame">
+                                                        <img src="media/research/research1.webp" alt="migration surfaces" />
+                                                      </div>
+                                                  </div>
                                               </div>
                                           </div>
 
                                   </div>
+
+                                  <div class="tm-flex tm-3-col-container">        
+                                    <div class="tm-2-col-textbox tm-bg-white-translucent">
+                                            <div class="text-xs-left tm-textbox tm-textbox-padding">
+                                                <div class="text-xs-left tm-textbox tm-2-col-textbox">
+                                                    <a href="https://covidmap.umd.edu/" target="_blank">
+                                                        <div class="photo-frame">
+                                                            <img src="media/research/research2.png" alt="Screenshot of CTIS project website" />
+                                                          </div>
+                                                    </a>
+ 
+                                                </div>
+                                            </div>
+                                        </div>
+
+
+                                    <div class="tm-2-col-textbox tm-bg-white-translucent">
+                                        <div class="text-xs-left tm-textbox tm-textbox-padding">
+                                            <h1 class="tm-text-title">The University of Maryland Social Data Science Center Global COVID-19 Trends and Impact Survey
+                                                in partnership with Facebook</h1>
+                                            <p class="tm-text"></p>
+
+                                            <p class="tm-text-title">I served as the main developer in Data Engineering and Visualization & API development for the project "The University of Maryland Social Data Science Center Global COVID-19 Trends and Impact Survey, in partnership with Facebook is a partnership between Facebook and academic institutions" (CTIS). The survey is available in 56 languages. A representative sample of Facebook users is invited on a daily basis to report on topics including, for example, symptoms, social distancing behavior, vaccine acceptance, mental health issues, and financial constraints.<br> </p>
+                                            <p class="tm-text-title"><b>Related publications:</b> <br> <b>1.</b> Junchuan Fan, <b>Yao Li</b> , Kathleen Stewart, Anil R. Kommareddy, Adrianne Bradford, and Samantha Chiu. "Covid-19 world symptom survey data api." (2020). <br><br> <b>2.</b> Kreuter, Frauke, Neta Barkay, Alyssa Bilinski, Adrianne Bradford, Samantha Chiu, Roee Eliat, Junchuan Fan,  Tal Galili, Daniel Haimovich, Brian Kim, Sarah LaRocca, <b>Yao Li </b>, Katherine Morris, Stanley Presser, Tal Sarig, Joshua A Salomon, Kathleen Stewart, Elizabeth A Stuart, Ryan Tibshirani. "Partnering with a global platform to inform research and public policy making." In <i>Survey Research Methods </i>, vol. 14, no. 2, pp. 159-163. 2020.</p>
+                                        </div>
+                                    </div>
+
+                            </div>
+
+
+
+
+
                               </div>
 
                           </div>
