--- a/index.html
+++ b/index.html
@@ -324,16 +324,53 @@
 
                                     <div class="tm-2-col-textbox tm-bg-white-translucent">
                                         <div class="text-xs-left tm-textbox tm-textbox-padding">
-                                            <h1 class="tm-text-title">The University of Maryland Social Data Science Center Global COVID-19 Trends and Impact Survey
-                                                in partnership with Facebook</h1>
+                                            <h1 class="tm-text-title">Data Engineering, API development and visualization for CTIS</h1>
                                             <p class="tm-text"></p>
 
                                             <p class="tm-text-title">I served as the main developer in Data Engineering and Visualization & API development for the project "The University of Maryland Social Data Science Center Global COVID-19 Trends and Impact Survey, in partnership with Facebook is a partnership between Facebook and academic institutions" (CTIS). The survey is available in 56 languages. A representative sample of Facebook users is invited on a daily basis to report on topics including, for example, symptoms, social distancing behavior, vaccine acceptance, mental health issues, and financial constraints.<br> </p>
                                             <p class="tm-text-title"><b>Related publications:</b> <br> <b>1.</b> Junchuan Fan, <b>Yao Li</b> , Kathleen Stewart, Anil R. Kommareddy, Adrianne Bradford, and Samantha Chiu. "Covid-19 world symptom survey data api." (2020). <br><br> <b>2.</b> Kreuter, Frauke, Neta Barkay, Alyssa Bilinski, Adrianne Bradford, Samantha Chiu, Roee Eliat, Junchuan Fan,  Tal Galili, Daniel Haimovich, Brian Kim, Sarah LaRocca, <b>Yao Li </b>, Katherine Morris, Stanley Presser, Tal Sarig, Joshua A Salomon, Kathleen Stewart, Elizabeth A Stuart, Ryan Tibshirani. "Partnering with a global platform to inform research and public policy making." In <i>Survey Research Methods </i>, vol. 14, no. 2, pp. 159-163. 2020.</p>
                                         </div>
+                                    </div>    
+                                </div>
+
+                                <div class="tm-flex tm-3-col-container">
+
+                                    <div class="tm-2-col-textbox tm-bg-white-translucent">
+                                        <div class="text-xs-left tm-textbox tm-textbox-padding">
+                                            <h1 class="tm-text-title">Soil mapping and fuzzy logical estimation</h1>
+                                            <p class="tm-text"></p>
+                                            <p class="tm-text-title">We developed an enhancive predictive coefficient (EPC)-based soil mapping (EPSM) method. EPC integrates the contrasts of associated environmental principal component covariates by the weights of the covariates influencing a certain soil property. A member recruiting process was programmed to determine the calculating samples for an unknown site after conducting an uncertainty threshold (ut) test for all the sample sites. We applied the EPSM method to five data groups with different numbers and distributions of sample sites for prediction. The results showed that the EPSM method performs better than the soil-land inference model (SoLIM) method regardless the value of ut and thus can be used to estimate the soil property values well at most unknown sites. The method is especially valid when the unknown sites are spatially far from the sample sites and when sample sites are limited in number or spatially distributed at a local area. Our study suggests that the EPSM method is an effective PSM method that can be widely used in soil mapping</p>
+                                            <div class="photo-frame">
+                                                <p style="text-align:center;"> <img src="media/research/research31.png" width="66%" height=""  alt="estimation results" /></p>
+                                              </div>
+                                            <p class="tm-text-title"><b>Related publications:</b> <br> <b>1. Yao Li</b>, Na Zhang, Run-Kui Li, Cheng-Yu Liu, Jing Shen, and Yong-Cai Jing. "Soil mapping based on assessment of environmental similarity and selection of calculating samples." <i>CATENA</i> 188 (2020): 104379.</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="tm-2-col-textbox tm-bg-white-translucent">
+                                        <div class="text-xs-left tm-textbox tm-textbox-padding">
+                                            <div class="text-xs-left tm-textbox tm-2-col-textbox">
+                                              <div class="photo-frame">
+                                                  <img src="media/research/research3.png" alt="Flow chart" />
+
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
 
                             </div>
+
+                            <div class="tm-flex tm-3-col-container">
+
+                                <div class="tm-1-col-textbox tm-bg-white-translucent">
+                                    <div class="text-xs-left tm-textbox tm-textbox-padding">
+                                        <h1 class="tm-text-title">Other Publications</h1>
+                                        <p class="tm-text"></p>
+                                        <p class="tm-text-title"> <b>1. </b>Chen, Dong, Varada Shevade, Allison Baer, Jiaying He, Amanda Hoffman-Hall, Qing Ying, <b>Yao Li</b>, and Tatiana V. Loboda. "A disease control-oriented land cover land use map for Myanmar." <i>Data</i> 6, no. 6 (2021): 63.<br><b>2. </b>Zhang, Yajie, Gaopeng Li, Jing Ge, <b>Yao Li</b>, Zhisheng Yu, and Haishan Niu. "sc_PDSI is more sensitive to precipitation than to reference evapotranspiration in China during the time period 1951–2015." <i>Ecological Indicators</i> 96 (2019): 448-457.<br><b>3. </b>Zhang, Yajie, <b>Yao Li</b>, Jing Ge, Gaopeng Li, Zhisheng Yu, and Haishan Niu. "Correlation analysis between drought indices and terrestrial water storage from 2002 to 2015 in China." <i>Environmental Earth Sciences </i> 77, no. 12 (2018): 1-12.<br><b>4. Yao Li </b>and Na Zhang "Multi-scale spatial distributions of Oedaleus decorus asiaticus." <i>Journal of University of Chinese Academy of Sciences</i>  34, no. 3 (2017): 329.<br><b>5. </b>Zhang, Na, Yong-Cai Jing, Cheng-Yu Liu, <b>Yao Li</b>, and Jing Shen. "A cellular automaton model for grasshopper population dynamics in Inner Mongolia steppe habitats." <i>Ecological Modelling</i> 329 (2016): 5-17.<br><b>6. </b>Shen, J., N. Zhang, B. He, C-Y. Liu, <b>Y. Li</b>, H-Y. Zhang, X-Y. Chen, and H. Lin. "Construction of a GeogDetector-based model system to indicate the potential occurrence of grasshoppers in Inner Mongolia steppe habitats." <i>Bulletin of Entomological Research</i> 105, no. 3 (2015): 335-346.</p>
+                                    </div>
+                                </div>
+
+                        </div>
 
 
 
