--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
                                     <div class="tm-2-col-textbox tm-bg-white-translucent">
                                         <div class="text-xs-left tm-textbox tm-textbox-padding">
-                                            <h1 class="tm-text-title">Simulating human mobitliy for Malaria</h1>
+                                            <h1 class="tm-text-title">Simulating human mobility for Malaria</h1>
                                             <p class="tm-text"></p>
 
                                             <p class="tm-text-title">More details about human movement patterns are needed to evaluate 
