--- a/index.html
+++ b/index.html
@@ -56,25 +56,39 @@
                         &#9776;
                     </button>
                     <div class="collapse navbar-toggleable-md text-xs-center text-uppercase tm-navbar" id="tmNavbar">
-                        <ul class="nav navbar-nav">
-                            <li class="nav-item active selected">
-                                <a class="nav-link" href="#0" data-no="1">About me<span
-                                        class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#0" data-no="2">Resume</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#0" data-no="3">Research</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#0" data-no="4">Photography</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#0" data-no="5">Music</a>
-                            </li>
 
-                        </ul>
+                        <nav class="navbar navbar-expand-lg">
+                            <div id="navbarNav">
+
+                                <ul class="navbar-nav">
+                                    <!-- <li class="nav-item active">
+                                <a class="nav-link" href="index.html">Home</a>
+                            </li> -->
+                                    <li class="nav-item active">
+                                        <a class="nav-link" href="#About" data-no="1">About me<span
+                                                class="sr-only">(current)</span></a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#Resume" data-no="2">Resume</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#Research" data-no="3">Research</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#Photography" data-no="4">Photography</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#Music" data-no="5">Music</a>
+                                    </li>
+
+                                </ul>
+                            </div>
+
+                        </nav>
+
+
+
+
                     </div>
                 </div>
 
