--- a/index.html
+++ b/index.html
@@ -331,6 +331,54 @@
 
 
                                 <div class="tm-flex tm-3-col-container">
+
+                                    <div class="tm-2-col-textbox tm-bg-white-translucent">
+                                        <div class="text-xs-left tm-textbox tm-textbox-padding">
+                                            <h1 class="tm-text-title">Malaria parasites migration simulation</h1>
+                                            <p class="tm-text"></p>
+
+                                            <p class="tm-text-title">A maximum entropy model was trained to estimate the
+                                                distribution of P. vivax malaria for a period between January 2019 and
+                                                April 2020, capturing estimated malaria occurrence for these provinces.
+                                                A random simulation workflow was developed to make region-based case
+                                                data usable for the machine learning approach. This workflow was used to
+                                                generate a probability surface for the ecological niche regions. The
+                                                resulting niche regions were analysed by occupation type, home and work
+                                                locations, and work-related travel routes to determine the relationship
+                                                between these variables and malaria occurrence. A one-way analysis of
+                                                variance (ANOVA) test was used to understand the relationship between
+                                                predicted malaria occurrence and occupation type.
+
+                                            </p>
+                                            <p class="tm-text-title"><b>Related publication:</b> <br> 1. Memarsadeghi,
+                                                Natalie, Kathleen Stewart, <b>Yao Li</b>, Siriporn Sornsakrin, Nichaphat
+                                                Uthaimongkol, Worachet Kuntawunginn, Kingkan Pidtana et al.
+                                                "Understanding work-related travel and its relation to malaria
+                                                occurrence in Thailand using geospatial maximum entropy modelling."
+                                                <i>Malaria Journal </i>22, no. 1 (2023): 1-11.
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <div class="tm-2-col-textbox tm-bg-white-translucent">
+                                        <div class="text-xs-left tm-textbox tm-textbox-padding">
+                                            <div class="text-xs-left tm-textbox tm-2-col-textbox">
+                                                <a href="https://malariajournal.biomedcentral.com/articles/10.1186/s12936-023-04478-6"
+                                                    target="_blank">
+                                                    <div class="photo-frame">
+                                                        <img src="media/research/research6.png"
+                                                            alt="migration surfaces" />
+                                                    </div>
+                                                </a>
+
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+
+
+                                <div class="tm-flex tm-3-col-container">
                                     <div class="tm-2-col-textbox tm-bg-white-translucent">
                                         <div class="text-xs-left tm-textbox tm-textbox-padding">
                                             <div class="text-xs-left tm-textbox tm-2-col-textbox">
@@ -371,7 +419,7 @@
                                                 mobile group; however, they were estimated to visit regions that had
                                                 higher prevalence of malaria
                                                 infection over other occupation groups.<br> </p>
-                                            <p class="tm-text-title"><b>Related publications:</b> <br>
+                                            <p class="tm-text-title"><b>Related publication:</b> <br>
                                                 <b>Yao Li</b>, Kathleen Stewart, Kay Thwe Han, Zay Yar Han, Poe P Aung,
                                                 Zaw W Thein,
                                                 Thura Htay, Dong Chen, Myaing M Nyunt, Christopher V Plowe,
@@ -503,7 +551,7 @@
                                                 <p style="text-align:center;"> <img src="media/research/research31.png"
                                                         width="66%" height="" alt="estimation results" /></p>
                                             </div>
-                                            <p class="tm-text-title"><b>Related publications:</b> <br> <b>1. Yao Li</b>,
+                                            <p class="tm-text-title"><b>Related publication:</b> <br> <b>1. Yao Li</b>,
                                                 Na Zhang, Run-Kui Li, Cheng-Yu Liu, Jing Shen, and Yong-Cai Jing. "Soil
                                                 mapping based on assessment of environmental similarity and selection of
                                                 calculating samples." <i>CATENA</i> 188 (2020): 104379.</p>
