--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                                         <div class="text-xs-left tm-textbox tm-textbox-padding">
 
                                             <h2 class="tm-text-title">Software & Tools</h2>
+                                            <p class="tm-text"><i>（frequency of use）</i></p>
 
                                             <div class="col-sm-11 col-md-10">
 
@@ -256,6 +257,7 @@
                                         <div class="text-xs-left tm-textbox tm-textbox-padding">
 
                                             <h2 class="tm-text-title">Programming</h2>
+                                            <p class="tm-text"><i>（frequency of use）</i></p>
 
                                             <div class="col-sm-11 col-md-10">
 
