--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
           <![endif]-->
 </head>
 
+<style>
+@media (max-width: 767px) {
+  .cd-bg-video-wrapper {
+    display: none;
+  }
+}
+</style>
+
 <body>
 
     <!-- Content -->
@@ -99,6 +107,7 @@
             <li class="selected">
                 <div class="cd-full-width">
                     <div class="container-fluid js-tm-page-content tm-page-1" data-page-no="1">
+                    
 
                         <div class="cd-bg-video-wrapper" data-video="video/cloud">
                             <!-- video element will be loaded using jQuery -->
